[package]
name = "rink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17.0"
crossterm = "0.22.1"
anyhow = "1.0.42"
dioxus = "0.1.8"
dioxus-html = "0.1.6"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
stretch2 = { git = "https://github.com/DioxusLabs/stretch" }
